compiler/testData/diagnostics/testsWithStdLib/incorrectComparatorInvocation.kt
// ISSUE: KT-54874

fun main(args: Array<String>) {
    val comparator = <!FUNCTION_CALL_EXPECTED!><!NO_VALUE_FOR_PARAMETER!>Comparator<!><Long?><!>
}
